cabal-version:      2.4
name:               advent-of-haskell
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tarik Eshaq
maintainer:         teshaq@mozilla.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable advent-of-haskell
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.16.4.0,
      advent-of-haskell-lib,
    hs-source-dirs:   app
    default-language: Haskell2010
library advent-of-haskell-lib
    exposed-modules: Day1, Day2, Day3, Day4, Util
    hs-source-dirs: lib
    build-depends: 
     base ^>=4.16.4.0,
     filepath ^>=1.4.2.2
    default-language: Haskell2010
